kubernetes/01-namespace.yml
kind: Namespace
apiVersion: v1
metadata: 
 name: easyshop
 labels:
   name: easyshop
   envirnoment: production
