kubernetes/08-easyshop-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: easyshop
  namespace: easyshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: easyshop
  template:
    metadata:
      labels:
        app: easyshop
    spec:
        containers:
          - name: easyshop
            image: raman20260/easyshop
            imagePullPolicy: Always
            ports:
              - containerPort: 3000
            resources:
              requests:
                cpu: 200m
                memory: 256Mi
              limits:      
                cpu: 500m
                memory: 512Mi
