kubernetes/14-redis-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: redis
  namespace: easyshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template: 
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7.0-alpine
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:  
              cpu: 200m
              memory: 256Mi
