kubernetes/09-easyshop-service.yml
kind: Service
apiVersion: v1
metadata:
  name: easyshop-service
  namespace: easyshop
spec:
  selector:
    app: easyshop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
