kubernetes/13-redis-service.yml
kind: Service
apiVersion: v1
metadata:
  name: easyshop-redis-service
  namespace: easyshop
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
